Overhaul file manager jobs backups and compress decompress, show progress and cancel for file operations, fix server list lag
